# hdl-core

./: LICENSE  README.md  poetry.toml  pyproject.toml
debounce/: README.md
debounce/hdl/: debounce.vhd
debounce/tb/: Makefile  test_debounce.py
ecc/: README.md
ecc/hdl/: ecc_decode.vhd  ecc_encode.vhd  rth_parity.vhd
ecc/tb/: Makefile  test_ecc.py
ecc/tb/ecc_decode/: Makefile  test_ecc.py
ecc/tb/ecc_encode/: Makefile  test_ecc.py
ecc/tb/rth_parity/: Makefile  test_ecc.py
ecc/tb/utils/: ecc.py
skid_buffer/: README.md  pyproject.toml
skid_buffer/hdl/: skid_buffer.vhd
skid_buffer/tb/: .gitignore  dut.py  skid_buffer_tb.py  test_run.py
